--- a/docs/manpages/smbd.8
+++ b/docs/manpages/smbd.8
@@ -1,4 +1,4 @@
-.TH SMBD 8 "20 May 1999" "smbd 2.0.4b"
+.TH "smbd " "8" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 smbd \- server to provide SMB/CIFS services to clients
