--- a/docs/manpages/smbsh.1
+++ b/docs/manpages/smbsh.1
@@ -1,4 +1,4 @@
-.TH SMBSH 1 "20 May 1999" "smbsh 2.0.4b"
+.TH "smbsh " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 smbsh \- Allows access to Windows NT filesystem using UNIX commands
