--- a/docs/manpages/nmbd.8
+++ b/docs/manpages/nmbd.8
@@ -1,4 +1,4 @@
-.TH "nmbd" "8" "23 Oct 1998" "Samba" "SAMBA" 
+.TH NMBD 8 "20 May 1999" "nmbd 2.0.4b"
 .PP 
 .SH "NAME" 
 nmbd \- NetBIOS name server to provide NetBIOS over IP
