--- a/docs/manpages/smbrun.1
+++ b/docs/manpages/smbrun.1
@@ -1,4 +1,4 @@
-.TH "smbrun " "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH SMBRUN 1 "20 May 1999" "smbrun 2.0.4b"
 .PP 
 .SH "NAME" 
 smbrun \- interface program between smbd and external programs
