--- a/appl/login/ChangeLog
+++ b/appl/login/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-18  Assar Westerlund  <assar@sics.se>
+
+	* add login-access
+
 1999-05-11  Assar Westerlund  <assar@sics.se>
 
 	* login.c: copy the v5 ccache to a file after having done setuid
