--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-21  Assar Westerlund  <assar@sics.se>
+
+	* kx.c (main): try to use $USERNAME
+
 1999-05-10  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.in (SOURCES*): update sources list
