--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-21  Assar Westerlund  <assar@sics.se>
+
+	* push.c (parse_pobox): try $USERNAME
+
 1999-05-11  Assar Westerlund  <assar@sics.se>
 
 	* push.c (do_v5): remove unused and non-working code
