--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-21  Assar Westerlund  <assar@sics.se>
+
+	* rsh.c (main): try $USERNAME
+
 1999-05-14  Assar Westerlund  <assar@sics.se>
 
 	* rshd.c (doit): afslog correctly
