--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,5 +1,7 @@
 1999-05-21  Assar Westerlund  <assar@sics.se>
 
+	* kx.c (main): don't byte-swap the argument to krb5_getportbyname
+
 	* kx.c (main): try to use $USERNAME
 
 1999-05-10  Assar Westerlund  <assar@sics.se>
