*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6277 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,8 @@
+1999-05-22  Assar Westerlund  <assar@sics.se>
+
+	* kxd.c (recv_conn): fix syslog messages
+	(main): fix inetd_flag thinko
+
 1999-05-21  Assar Westerlund  <assar@sics.se>
 
 	* kx.c (main): don't byte-swap the argument to krb5_getportbyname
