--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-02  Johan Danielsson  <joda@pdc.kth.se>
+
+	* ftp/ftp.c (sendrequest): lmode != rmode
+	
 1999-05-21  Assar Westerlund  <assar@sics.se>
 
 	* ftp/extern.h (sendrequest): update prototype
