--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-06-02  Johan Danielsson  <joda@pdc.kth.se>
 
+	* configure.in: use KRB_CHECK_X
+	
 	* configure.in: check for netinet/ip.h
 	
 1999-05-21  Assar Westerlund  <assar@sics.se>
