--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-02  Johan Danielsson  <joda@pdc.kth.se>
+
+	* check-x.m4: extended test for X
+	
 1999-05-14  Assar Westerlund  <assar@sics.se>
 
 	* check-netinet-ip-and-tcp.m4: proper autoheader tricks
