*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6321 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/su/ChangeLog
+++ b/appl/su/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-15  Assar Westerlund  <assar@sics.se>
+
+	* su.c (main): conditionalize `getlogin'
+
 1999-05-11  Assar Westerlund  <assar@sics.se>
 
 	* su.c (verfiy_krb5): get the name out of the ccache before
