--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,11 @@
+1999-06-15  Assar Westerlund  <assar@sics.se>
+
+	* kx.h: const-pollution
+
+	* kx.c: use get_default_username and resulting const pollution
+
+	* context.c (context_set): const pollution
+
 1999-05-22  Assar Westerlund  <assar@sics.se>
 
 	* kxd.c (recv_conn): fix syslog messages
