--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-15  Assar Westerlund  <assar@sics.se>
+
+	* rsh.c: use get_default_username and resulting const pollution
+
 1999-05-21  Assar Westerlund  <assar@sics.se>
 
 	* rsh.c (main): try $USERNAME
