--- a/lib/kadm5/ChangeLog
+++ b/lib/kadm5/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-15  Assar Westerlund  <assar@sics.se>
+
+	* init_c.c (get_cred_cache): use get_default_username
+
 1999-05-21  Assar Westerlund  <assar@sics.se>
 
 	* init_c.c (get_cred_cache): use $USERNAME
