--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-15  Assar Westerlund  <assar@sics.se>
+
+	* ftp/krb4.c (krb4_auth): type correctness
+
 1999-06-02  Johan Danielsson  <joda@pdc.kth.se>
 
 	* ftp/ftp.c (sendrequest): lmode != rmode
