--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-15  Assar Westerlund  <assar@sics.se>
+
+	* push.c: get_default_username and the resulting const propagation
+
 1999-05-21  Assar Westerlund  <assar@sics.se>
 
 	* push.c (parse_pobox): try $USERNAME
