--- a/appl/telnet/ChangeLog
+++ b/appl/telnet/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-16  Johan Danielsson  <joda@pdc.kth.se>
+
+	* telnet/commands.c: add kerberos debugging option
+
 1999-06-15  Assar Westerlund  <assar@sics.se>
 
 	* telnet/commands.c (tn): use get_default_username
