--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-06-16  Assar Westerlund  <assar@sics.se>
+
+	* kuser/kdestroy.c (main): try to destroy v4 ticket even if the
+ 	destruction of the v5 one fails
+
 1999-06-02  Johan Danielsson  <joda@pdc.kth.se>
 
 	* configure.in: use KRB_CHECK_X
