*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6337 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-20  Assar Westerlund  <assar@sics.se>
+
+	* kxd.c (main): hopefully do inetd confusion right
+
 1999-06-15  Assar Westerlund  <assar@sics.se>
 
 	* krb4.c (krb4_authenticate): get rid of a warning
