--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-23  Assar Westerlund  <assar@sics.se>
+
+	* rsh.c: new option `-e' for not trying to open an stderr socket
+
 1999-06-15  Assar Westerlund  <assar@sics.se>
 
 	* rsh.c: use get_default_username and resulting const pollution
