--- a/appl/telnet/ChangeLog
+++ b/appl/telnet/ChangeLog
@@ -1,3 +1,8 @@
+1999-06-23  Assar Westerlund  <assar@sics.se>
+
+	* telnet/commands.c (togkrbdebug): conditionalize on
+ 	krb_disable_debug
+
 1999-06-16  Johan Danielsson  <joda@pdc.kth.se>
 
 	* telnet/commands.c: add kerberos debugging option
