*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6348 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/kadmin/ChangeLog
+++ b/kadmin/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-23  Assar Westerlund  <assar@sics.se>
+
+	* version4.c (values_to_ent): convert key data correctly
+
 1999-05-23  Assar Westerlund  <assar@sics.se>
 
 	* init.c (create_random_entry): more correct setting of mask
