--- a/doc/ack.texi
+++ b/doc/ack.texi
@@ -43,6 +43,10 @@ Bugfixes, documentation, encouragement, and code has been contributed by:
 @email{kouril@@informatics.muni.cz}
 @item Åke Sandgren 
 @email{ake@@cs.umu.se}
+@item Michal Vocu
+@email{michal@@karlin.mff.cuni.cz}
+@item Miroslav Ruda
+@email{ruda@@ics.muni.cz}
 @item and we hope that those not mentioned here will forgive us.
 @end table
 
