--- a/appl/telnet/ChangeLog
+++ b/appl/telnet/ChangeLog
@@ -1,5 +1,7 @@
 1999-06-23  Assar Westerlund  <assar@sics.se>
 
+	* telnet/Makefile.am (INCLUDES): add $(INCLUDE_krb4)
+
 	* telnet/commands.c (togkrbdebug): conditionalize on
  	krb_disable_debug
 
