*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6382 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/afsutil/ChangeLog
+++ b/appl/afsutil/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-27  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am (bin_PROGRAMS): only include pagsh if KRB4
+
 1999-06-26  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: add pagsh
