*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6386 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/TODO
+++ b/TODO
@@ -89,3 +89,8 @@ OTP?
 ** lib/roken
 
 ** lib/sl
+
+** socket stuff
+
+update everything to rfc2553 and implement fall-back functions for
+them in lib/roken
