--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-03  Assar Westerlund  <assar@sics.se>
+
+	* rsh.c (construct_command): handle argc == 0 for generality
+
 1999-06-23  Assar Westerlund  <assar@sics.se>
 
 	* rsh.c: new option `-e' for not trying to open an stderr socket
