--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-04  Assar Westerlund  <assar@sics.se>
+
+	* admin/srvconvert.c (srvconv): better error messages
+
 1999-07-03  Assar Westerlund  <assar@sics.se>
 
 	* lib/krb5/principal.c (unparse_name): error check malloc properly
@@ -24,6 +28,10 @@
 
 	* lib/asn1/der_copy.c (copy_octet_string): don't fail if length ==
  	0 and malloc returns NULL
+
+1999-06-29  Assar Westerlund  <assar@sics.se>
+
+	* lib/krb5/addr_families.c (ipv6_parse_addr): implement
 
 1999-06-24  Assar Westerlund  <assar@sics.se>
 
