--- a/appl/afsutil/ChangeLog
+++ b/appl/afsutil/ChangeLog
@@ -1,3 +1,8 @@
+1999-07-04  Assar Westerlund  <assar@sics.se>
+
+	* afslog.c (expand_cell_name): terminate on #.  From Miroslav Ruda
+ 	<ruda@ics.muni.cz>
+
 1999-06-27  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am (bin_PROGRAMS): only include pagsh if KRB4
