*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6417 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/TODO
+++ b/TODO
@@ -16,6 +16,10 @@ Implement RFC1731 and 1734, pop over GSS-API
 
 should test more stuff
 
+** appl/ftp
+
+Implement FTP over IPv6 (RFC2428)
+
 * doc
 
 there's some room for improvement here.
