*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6428 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-06  Assar Westerlund  <assar@sics.se>
+
+	* readv.c (readv): typo
+
 1999-07-03  Assar Westerlund  <assar@sics.se>
 
 	* writev.c (writev): error check malloc properly
