*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6446 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/telnet/ChangeLog
+++ b/appl/telnet/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-07  Assar Westerlund  <assar@sics.se>
+
+	* telnet/commands.c (tn): extra bogus const-cast
+
 1999-07-06  Assar Westerlund  <assar@sics.se>
 
 	* telnetd/sys_term.c (start_login): print a different warning with
