--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,8 @@
+1999-07-08  Johan Danielsson  <joda@pdc.kth.se>
+
+	* roken.awk: use puts, as suggested by Jeffrey Hutzelman
+	<jhutz+@cmu.edu>
+
 1999-07-06  Assar Westerlund  <assar@sics.se>
 
 	* readv.c (readv): typo
