source/utils/testparm.c		added -L option to set %L macro value and 				added -h option for usage docs/htmldocs/testparm.1.html	updated man page docs/manpages/testparm.1 docs/yodldocs/testparm.1.yo

--- a/docs/manpages/testparm.1
+++ b/docs/manpages/testparm.1
@@ -5,7 +5,7 @@ testparm \- check an smb\&.conf configuration file for internal correctness
 .PP 
 .SH "SYNOPSIS" 
 .PP 
-\fBtestparm\fP [-s] [configfilename] [hostname hostIP]
+\fBtestparm\fP [-s] [-h] [-L servername] [configfilename] [hostname hostIP]
 .PP 
 .SH "DESCRIPTION" 
 .PP 
@@ -36,6 +36,13 @@ an exit code of 0\&. This allows shell scripts to test the output from
 Without this option, \fBtestparm\fP will prompt for a
 carriage return after printing the service names and before dumping
 the service definitions\&.
+.IP 
+.IP "\fB-h\fP" 
+Print usage message
+.IP 
+.IP "\fB-L servername\fP" 
+Sets the value of the %L macro to servername\&. This
+is useful for testing include files specified with the %L macro\&.
 .IP 
 .IP "\fBconfigfilename\fP" 
 This is the name of the configuration file to
