*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6451 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-12  Assar Westerlund  <assar@sics.se>
+
+	* configure.in: handle not building X programs
+
 1999-07-06  Assar Westerlund  <assar@sics.se>
 
 	* lib/krb5/addr_families.c (ipv6_parse_addr): remove duplicate
