--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-12  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: handle not building X programs
+
 1999-06-23  Assar Westerlund  <assar@sics.se>
 
 	* kx.c: conditionalize krb_enable_debug
