*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6455 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,12 @@
+1999-07-13  Assar Westerlund  <assar@sics.se>
+
+	* roken.h.in (k_getpwnam): update prototype
+
+	* k_getpwnam.c (k_getpwnam): const-ize
+
+	* get_default_username.c (get_default_username): a better way of
+ 	guessing when the user has su:ed
+
 1999-07-08  Johan Danielsson  <joda@pdc.kth.se>
 
 	* roken.awk: use puts, as suggested by Jeffrey Hutzelman
