--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,10 @@
+1999-06-13  Assar Westerlund  <assar@sics.se>
+
+	* krb-func-getlogin.m4: new file for testing for posix (broken)
+ 	getlogin
+
+	* shared-libs.m4 (freebsd[34]): don't use ld -Bshareable
+
 1999-06-02  Johan Danielsson  <joda@pdc.kth.se>
 
 	* check-x.m4: extended test for X
