*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6460 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,5 +1,7 @@
 1999-06-13  Assar Westerlund  <assar@sics.se>
 
+	* krb-struct-spwd.m4: consequent name of cache variables
+
 	* krb-func-getlogin.m4: new file for testing for posix (broken)
  	getlogin
 
