--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -2407,6 +2407,24 @@ permissions for this group to the files and directories within this
 service the Samba administrator can restrict or allow sharing of these
 files\&.
 .IP 
+In Samba 2\&.0\&.5 and above this parameter has extended functionality in the following
+way\&. If the group name listed here has a \'+\' character prepended to it
+then the current user accessing the share only has the primary group 
+default assigned to this group if they are already assigned as a member
+of that group\&. This allows an administrator to decide that only users
+who are already in a particular group will create files with group 
+ownership set to that group\&. This gives a finer granularity of ownership
+assignment\&. For example, the setting \f(CWforce group = +sys\fP means
+that only users who are already in group sys will have their default
+primary group assigned to sys when accessing this Samba share\&. All
+other users will retain their ordinary primary group\&.
+.IP 
+If the \fB"force user"\fP parameter is also set the
+group specified in \fBforce group\fP will override the primary group
+set in \fB"force user"\fP\&.
+.IP 
+See also \fB"force user"\fP
+.IP 
 \fBDefault:\fP
 \f(CW	no forced group\fP
 .IP 
@@ -2426,6 +2444,13 @@ password\&. Once connected, all file operations will be performed as the
 \f(CW"forced user"\fP, no matter what username the client connected as\&.
 .IP 
 This can be very useful\&.
+.IP 
+In Samba 2\&.0\&.5 and above this parameter also causes the primary
+group of the forced user to be used as the primary group for all
+file activity\&. Prior to 2\&.0\&.5 the primary group was left as the
+primary group of the connecting user (this was a bug)\&.
+.IP 
+See also \fB"force group"\fP
 .IP 
 \fBDefault:\fP
 \f(CW	no forced user\fP
